# sat-solver

./: .coveragerc  .pylintrc  README.md  pyproject.toml
dokumentaatio/: Kayttoohje.md  Maarittelydokumentti.md  Testausdokumentti.md  Toteutusdokumentti.md  Viikkoraportti 1.md  Viikkoraportti 2.md  Viikkoraportti 3.md  Viikkoraportti 4.md  Viikkoraportti 5.md  Viikkoraportti 6.md  Viikkoraportti 7 - 8.md  Viikkoraportti 7.md
src/: main.py  parse_files.py  solver.py
src/tests/: solver_test.py
